--- a/style/_components.scss
+++ b/style/_components.scss
@@ -17,6 +17,20 @@ $gradientGreen:linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
         font-size: 14px;
         line-height: 16px;
         color: #9597A5;
+        &::after{
+            content: '';
+            width: 0%;
+            height: 3px;
+            margin: auto;
+            display: block;
+            background: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+            transform: translate(0, 12px);
+            transition: 0.5s;
+            border-radius: 10px;
+        }
+        &:hover::after{
+            width: 100%;
+        }
     }
 }
 
@@ -24,13 +38,15 @@ $gradientGreen:linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
     font-weight: 500;
     font-size: 14px;
     line-height: 28px;
-    color: #FFFFFF;
     padding: 8px 32px;
     background: $gradientGreen;
     border-radius: 22px;
     border: none;
     outline: none;
     transition: 0.4s;
+    a{
+        color: #FFFFFF;
+    }
 
     &:hover{
         opacity: 0.7;
@@ -131,5 +147,56 @@ $gradientGreen:linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
             }
 
         }
+    }
+}
+
+.footer{
+    background-color: #2D314D;
+    .container{
+        display: flex;
+        .col-3{
+            flex-basis: 30%;
+            .socials{
+                display: flex;
+                gap: 14px;
+                padding-top: 36px;
+                .social-link{
+                    transition: 0.4s;
+                    &:hover{
+                        path{
+                            fill: #30C88F;
+                        }
+                    }
+
+                }
+            }
+        }
+        .col-2{
+            flex-basis: 20%;
+            .navbar{
+                flex-wrap: wrap;
+                .navbar-item{
+                    color: #FFFFFF;
+                    &:hover{
+                        color: #30C88F;                        ;
+                    }
+                }
+            }
+        }
+        .col-7{
+            flex-basis: 50%;
+            text-align: end;
+            .copyright{
+                padding-top: 24px;
+                font-size: 15px;
+                line-height: 26px;
+                text-align: right;
+                letter-spacing: -0.234375px;
+                color: #FFFFFF;
+                mix-blend-mode: normal;
+                opacity: 0.5;
+            }
+        }
+
     }
 }
