--- a/style/main.scss
+++ b/style/main.scss
@@ -96,6 +96,11 @@
     padding: 80px 0 100px;
 }
 
+// Footer
+.footer{
+    padding: 48px 0 ;
+}
+
 
 
 
@@ -140,12 +145,12 @@
 
 @media (min-width:375px) and (max-width:576px) {
     .container {
-        max-width: 540px
+        width: 90%;
     }
 }
 
-@media screen and (width:375px) {
+@media screen and (max-width:375px) {
     .container {
-        max-width: 350px
+        width: 90%;
     }
 }
